If the window handle is destroyed because of an owner being destroyed, ensure any disabled windows are enabled.

BUG=612117

Review-Url: https://codereview.chromium.org/1978163003
Cr-Commit-Position: refs/heads/master@{#394861}

Former-commit-id: 3972b0ed7c8531f67f7e796fa6f939a70f2694f9